<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/ivCover"
        android:layout_width="@dimen/book_thumb_width"
        android:layout_height="@dimen/book_thumb_height"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/book_empty"
        android:scaleType="fitCenter"

        />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/text_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        />

    <TextView
        android:id="@+id/tvAuthor"
        style="@style/text_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"

        />

</LinearLayout>